--- a/style.css
+++ b/style.css
@@ -238,6 +238,207 @@ html {
   transition: 0.5s;
 }
 
-.services .fila .service.hover {
-  box-shadow: 5px 5px 10px #565656, -5px -5px 10px;
+.services .fila .service:hover {
+  box-shadow: 5px 5px 10px #565656, -5px -5px 10px #8a8a8a;
+}
+
+.services .fila .service h4 {
+  font-size: 22px;
+  margin-bottom: 25px;
+}
+
+.services .fila .service .icon {
+  display: inline-block;
+  width: 60px;
+  height: 60px;
+  border-radius: 50px;
+  background-color: #d3d3d3;
+  padding: 20px;
+  margin-bottom: 25px;
+}
+
+.services .fila .service hr {
+  width: 30px;
+  margin: auto;
+  color: #000;
+  margin-bottom: 25px;
+}
+
+.services .fila .service ul {
+  list-style: none;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+
+.service .fila .service p {
+  font-size: 14px;
+  line-height: 22px;
+}
+
+/*SECTION HABILITIES*/
+
+.content-skills {
+  background: linear-gradient(#ff5000, rgba(33, 16, 16, 0.8)),
+    url("img/fondo-skills.jpg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  padding: 100px 0;
+  text-align: center;
+}
+
+.content-skills .skills {
+  max-width: 600px;
+  margin: 30px auto;
+}
+
+.content-skills .skills .info {
+  display: flex;
+  justify-content: space-between;
+}
+
+.content-skills .skills .list {
+  display: inline-block;
+  margin-right: 20px;
+  height: 10px;
+  width: 10px;
+  background-color: #fff;
+}
+
+.content-skills .skills .barra {
+  background-color: #919191;
+  width: 100%;
+  height: 6px;
+  margin: 10px 0px;
+}
+
+/* Estilo aplicado mediante JS*/
+
+.content-skills .skills .barra .barra-progreso1 {
+  background-color: #fff;
+  width: 50%;
+  height: 6px;
+  animation: progreso1 2s forwards;
+}
+
+.content-skills .skills .barra .barra-progreso2 {
+  background-color: #fff;
+  width: 50%;
+  height: 6px;
+  animation: progreso2 2s forwards;
+}
+
+.content-skills .skills .barra .barra-progreso3 {
+  background-color: #fff;
+  width: 40%;
+  height: 6px;
+  animation: progreso3 2s forwards;
+}
+
+.content-skills .skills .barra .barra-progreso4 {
+  background-color: #fff;
+  width: 30%;
+  height: 6px;
+  animation: progreso4 2s forwards;
+}
+
+/* Creacion animación de las barras*/
+
+@keyframes progreso1 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 50%;
+  }
+}
+
+@keyframes progreso2 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 50%;
+  }
+}
+
+@keyframes progreso3 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 40%;
+  }
+}
+
+@keyframes progreso4 {
+  0% {
+    width: 0;
+  }
+  100% {
+    width: 30%;
+  }
+}
+
+/* SECTION PORTFOLIO*/
+
+.portfolio {
+  max-width: 1100px;
+  padding: 100px 0;
+  margin: auto;
+}
+
+.portfolio .title-portfolio {
+  text-align: center;
+  font-size: 22px;
+  text-transform: uppercase;
+  color: #111135;
+  text-decoration: underline;
+  text-decoration-color: #d3d3d3;
+  text-decoration-thickness: 5px;
+}
+
+.portfolio .fila-portfolio {
+  display: flex;
+  justify-content: space-between;
+  margin: 30px 0;
+}
+
+.portfolio .fila-portfolio .proyect {
+  max-width: 450px;
+  border: 1px solid #000;
+  margin: 0 10px;
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio .fila-portfolio .proyect img {
+  width: 100%;
+  height: 100%;
+  filter: grayscale(1);
+  object-fit: cover;
+  transition: 0.5s;
+}
+
+.portfolio .fila-portfolio .proyect:hover img {
+  filter: grayscale(0);
+}
+
+.portfolio .fila-portfolio .info-proyect {
+  position: absolute;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  color: #ff5000;
+  width: 100%;
+  padding: 10px;
+  opacity: 0;
+  bottom: -40px;
+  transition: 0.5s;
+}
+
+.portfolio .fila-portfolio .proyect:hover .info-proyect {
+  opacity: 1;
+  bottom: 0;
 }
